# spring-upgrade-radar

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html  landing-page-copy.md  launch-copy.md  marketing-summary.md  marketplace-submission.md  migration-tickets.md  productization-plan.md  sample-exec-summary-SpringBoot_JPA_Blog_Prj.md  sample-github-issues-SpringBoot_JPA_Blog_Prj.md  sample-jira-SpringBoot_JPA_Blog_Prj.csv  sample-report-SpringBoot_JPA_Blog_Prj.md  sample-tickets-SpringBoot_JPA_Blog_Prj.json
docs/articles/: spring-boot-27-to-3x-migration-checklist.html  spring-boot-27-to-3x-migration-checklist.md
examples/demo-spring-boot-27/: build.gradle
examples/demo-spring-boot-27/src/main/java/com/example/: DemoApplication.java
spring_upgrade_radar/: __init__.py  cli.py  report.py  scanner.py
tests/: test_cli.py  test_real_world_rules.py  test_report.py  test_scanner.py
