[project]
name = "spring-upgrade-radar"
version = "0.1.0"
description = "Local-first Spring Boot upgrade risk scanner"
requires-python = ">=3.11"
authors = [{name = "pure"}]

[project.scripts]
spring-upgrade-radar = "spring_upgrade_radar.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spring_upgrade_radar*"]
